--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Greetings!!"
+        android:text="@string/greetings"
         android:textColor="#F44336"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
