--- a/app/src/main/res/values/nav_ids.xml
+++ b/app/src/main/res/values/nav_ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="navigation_users" type="id" />
+    <item name="navigation_search" type="id" />
 </resources>
