--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -22,212 +22,43 @@
         app:cardCornerRadius="14dp"
         app:cardElevation="4dp">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:foreground="?attr/selectableItemBackground"
+            tools:background="@color/teal_700"
+            tools:ignore="UnusedAttribute">
 
-            <!-- Avatar and Name -->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:foreground="?attr/selectableItemBackground"
-                tools:background="@color/teal_700">
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_margin="20dp"
+                android:scaleType="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:paletteCard="@{cardView}"
+                app:paletteImage="@{user.avatarUrl}" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:orientation="vertical">
-
-                    <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/image"
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        android:layout_marginHorizontal="20dp"
-                        android:scaleType="center"
-                        app:paletteCard="@{cardView}"
-                        app:paletteImage="@{user.avatarUrl}" />
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:elevation="4dp"
-                        android:gravity="center"
-                        android:maxLines="1"
-                        android:padding="8dp"
-                        android:text="@{user.name}"
-                        android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        tools:text="Ash4rk" />
-
-                </LinearLayout>
-
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:foreground="?attr/selectableItemBackground"
-                tools:background="@color/teal_700">
+                android:elevation="4dp"
+                android:gravity="center"
+                android:maxLines="1"
+                android:padding="12dp"
+                android:text="@{user.name}"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image"
+                tools:text="Ash4rk" />
 
-                <!-- Repos and Followers -->
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="8dp"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <com.google.android.material.chip.Chip
-                            android:layout_height="wrap_content"
-                            android:layout_width="0dp"
-                            android:textAlignment="center"
-                            android:text="Repositories: 10"
-                            android:clickable="false"
-                            android:layout_weight="1"
-                            android:textSize="12sp"
-                            android:layout_marginEnd="8dp"
-                            tools:text="Repositories: 10"/>
-
-                        <com.google.android.material.chip.Chip
-                            android:layout_height="wrap_content"
-                            android:layout_width="0dp"
-                            android:textAlignment="center"
-                            android:text="Followers: 10"
-                            android:clickable="false"
-                            android:layout_weight="1"
-                            android:textSize="12sp"
-                            tools:text="Followers: 2"/>
-
-                    </LinearLayout>
-
-                    <!-- Bio -->
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Android Developer"
-                        android:textColor="@color/white"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/image"
-                        tools:text="Android Developer"/>
-
-                    <!-- Company, Location, Blog/Website, and Member Since -->
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Company: "
-                            android:textStyle="bold"
-                            android:textColor="@android:color/darker_gray"/>
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Google"
-                            android:textColor="@android:color/white"
-                            tools:text="Google"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Location: "
-                            android:textStyle="bold"
-                            android:textColor="@android:color/darker_gray"/>
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="San Francisco, CA"
-                            android:textColor="@android:color/white"
-                            tools:text="San Francisco, CA"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Blog / Website: "
-                            android:textStyle="bold"
-                            android:textColor="@android:color/darker_gray"/>
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="https://www.google.com"
-                            android:maxLines="1"
-                            android:ellipsize="end"
-                            android:textColor="@android:color/white"
-                            android:autoLink="web"
-                            tools:text="https://www.google.com"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Member Since: "
-                            android:textStyle="bold"
-                            android:textColor="@android:color/darker_gray"/>
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="January 1, 2023"
-                            android:textColor="@android:color/white"
-                            tools:text="January 1, 2023"/>
-
-                    </LinearLayout>
-
-                    </LinearLayout>
-
-
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
